--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,3 @@
-h1= title
-p Welcome to #{title}
+a(href="/signin")
+  img(src="http://si0.twimg.com/images/dev/buttons/sign-in-with-twitter-l.png")
+
