--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+  body
+    - if (authenticated)
+      a(href="/logout")
+       |Logout
+    h1= title
+  != body
