--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,10 @@
-!!!
+!!! 5
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src='/socket.io/socket.io.js')
+    script(type='text/javascript', src='http://code.jquery.com/jquery-1.6.2.min.js')
   body
     - if (authenticated)
       a(href="/logout")
