--- a/views/authok.jade
+++ b/views/authok.jade
@@ -1,3 +1,7 @@
 h2 Welcome, 
   =name
   !!
+h3 If you want to be *stalked* by someone, install this 
+  a(href="/stalkr.crx") Google Chrome Extension
+  .
+
