--- a/views/individual.jade
+++ b/views/individual.jade
@@ -2,13 +2,20 @@ script(type='text/javascript')
   $(function() {
     var userId = $('#userId').text().trim();
     console.log(userId);
-    var socket = io.connect('http://mesolabs.no.de/' + userId);
+    var socket = io.connect('http://localhost:3000/' + userId);
     socket.on('access', function(data) {
       if ($('.page').size() > 30) {
         $('.page:last').remove();
       }
-
-      $('#pages').prepend('<p class="page">' + data.title + ' ( ' + data.url + ' )</p>');
+      var user = data.user;
+      $('#pages').prepend(
+        '<p class="page">' +
+          '<a href="http://localhost:3000/' + user.name + '">' +
+            '<img src="' + user.profile_url + '"/>' + 
+          '</a>' +
+          '<span style="font-weight: bold">' + data.title + '</span> ' +
+          '(<a href="' + data.url + '">' + data.url + '</a>)' +
+        '</p>');
     });
   });
 #userId(style='display: none;')= userId
