--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='http://code.jquery.com/jquery-1.6.2.min.js')
   body
+    iframe(align="right", src="http://nodeknockout.com/iframe/mesolabs", frameborder='0', scrolling='no', allowtransparency='true', width='115', height='25')
     - if (authenticated)
       a(href="/logout")
        |Logout
