--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ script(type='text/javascript')
         $('.page:last').remove();
       }
       var user = data.user;
+      $('#loading').hide();
       $('#pages').prepend(
         '<p class="page">' +
           '<a href="/' + user.name + '">' +
@@ -24,3 +25,4 @@ h3 If you want to *stalk* who you follow on Twitter,
 
 h2 People are accessing these pages NOW.
 #pages
+  img#loading(src="/loading.gif")
