--- a/views/authok.jade
+++ b/views/authok.jade
@@ -7,14 +7,16 @@ script(type='text/javascript')
         $('.page:last').remove();
       }
       var user = data.user;
+      var date = new Date(data.timestamp);
       $('#loading').hide();
       $('#pages').prepend(
         '<p class="page">' +
           '<a href="/' + user.name + '">' +
-            '<img src="' + user.profile_url + '"/>' + 
+            '<img src="' + user.profile_url + '" style="float: left;"/>' + 
           '</a>' +
           '<span style="font-weight: bold">' + data.title + '</span> ' +
           '(<a href="' + data.url + '">' + data.url + '</a>)' +
+          '<br /><span style="color: #AEAEAE;">' + date.toLocaleString() + '</span>' + 
         '</p>');
     });
   });
