--- a/views/individual.jade
+++ b/views/individual.jade
@@ -1,21 +1,23 @@
 script(type='text/javascript')
   $(function() {
-    var userId = $('#userId').text().trim();
-    console.log(userId);
     var socket = io.connect('http://mesolabs.no.de/' + userId);
+    var userId = $('#userId').text().trim();
     socket.on('access', function(data) {
+      console.log(data);
       if ($('.page').size() > 30) {
         $('.page:last').remove();
       }
       var user = data.user;
+      var date = new Date(data.timestamp);
       $('#loading').hide();
       $('#pages').prepend(
         '<p class="page">' +
           '<a href="/' + user.name + '">' +
-            '<img src="' + user.profile_url + '"/>' + 
+            '<img src="' + user.profile_url + '" style="float: left;"/>' + 
           '</a>' +
           '<span style="font-weight: bold">' + data.title + '</span> ' +
           '(<a href="' + data.url + '">' + data.url + '</a>)' +
+          '<br /><span style="color: #AEAEAE;">' + date.toLocaleString() + '</span>' + 
         '</p>');
     });
   });
