--- a/views/index.jade
+++ b/views/index.jade
@@ -21,11 +21,11 @@ script(type='text/javascript')
         '</p>');
     });
   });
-h3 If you want to *stalk* who you follow on Twitter, 
+h3 If you want to *stalk* someone specific, 
   a(href="/signin")
     img(src="http://si0.twimg.com/images/dev/buttons/sign-in-with-twitter-l.png")
   .
 
-h2 People are accessing these pages NOW.
+h2 People are watching these pages NOW.
 #pages
   img#loading(src="/loading.gif")
