--- a/views/individual.jade
+++ b/views/individual.jade
@@ -23,6 +23,6 @@ script(type='text/javascript')
   });
 #userId(style='display: none;')= userId
 h2= name
- |&nbsp;is accessing these pages NOW.
+ |&nbsp;is watching these pages NOW.
 #pages
   img#loading(src="/loading.gif")
