--- a/views/authok.jade
+++ b/views/authok.jade
@@ -28,6 +28,6 @@ h3 If you want to be *stalked* by someone, install this
   .
 h3
   a(href="#") view stream that shows who you follow on Twitter.
-h2 People are accessing these pages NOW.
+h2 People are watching these pages NOW.
 #pages
   img#loading(src="/loading.gif")
