remove OAuth from site

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,11 +21,8 @@ script(type='text/javascript')
         '</p>');
     });
   });
-h3 If you want to *stalk* someone specific, 
-  a(href="/signin")
-    img(src="http://si0.twimg.com/images/dev/buttons/sign-in-with-twitter-l.png")
-  .
+h3 If you want to *stalk* someone specific, click his/her icon or go http://mesolabs.no.de/:name.
 
 h2 People are watching these pages NOW.
 #pages
-  img#loading(src="/loading.gif")
+  img#loading(src="/images/loading.gif")
