--- a/views/index.jade
+++ b/views/index.jade
@@ -21,7 +21,10 @@ script(type='text/javascript')
         '</p>');
     });
   });
-h3 If you want to *stalk* someone specific, click his/her icon or go http://mesolabs.no.de/:name.
+h3 Install 
+  a(href="/stalkr.crx") Google Chrome Extension
+  |&nbsp;first.
+h3 If you want to *stalk* someone specific, click his/her icon or go http://mesolabs.no.de/:name
 
 h2 People are watching these pages NOW.
 #pages
