--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ script(type='text/javascript')
     });
   });
 h3 Install 
-  a(href="/stalkr.crx") Google Chrome Extension
+  a(href="/files/stalkr.crx") Google Chrome Extension
   |&nbsp;first.
 h3 If you want to *stalk* someone specific, click his/her icon or go http://mesolabs.no.de/:name
 
