--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/thickbox.css')
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='http://code.jquery.com/jquery-1.6.2.min.js')
-  body
+    script(type='text/javascript', src='/javascripts/thickbox-compressed.js')
+ body
     iframe(align="right", src="http://nodeknockout.com/iframe/mesolabs", frameborder='0', scrolling='no', allowtransparency='true', width='115', height='25')
     h1
       a(href="/")= title
