--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ script(type='text/javascript')
       var user = data.user;
       var date = new Date(data.timestamp);
       $('#loading').hide();
-      if (data.url.indexOf('ustream') === -1) {
+//      if (data.url.indexOf('ustream.tv') === -1) {
         if (data.url.indexOf('?') === -1) {
           var iframeUrl = data.url + '?keepThis=true';
           $('#now').attr('href', data.url + '?' + params);
@@ -20,9 +20,9 @@ script(type='text/javascript')
           $('#now').attr('href', data.url + '&' + params);
         }
         $('#now').attr('title', data.title);
-        $('#TB_iframeContent').attr('src', data.url);
+        $('#TB_iframeContent').attr('src', iframeUrl);
         tb_showIframe();
-      }
+//      }
       $('#pages').prepend(
         '<p class="page" style="clear: both; padding: 5px;">' +
           '<a style="float: left;" href="/' + user.name + '">' +
