--- a/views/index.jade
+++ b/views/index.jade
@@ -11,16 +11,18 @@ script(type='text/javascript')
       var user = data.user;
       var date = new Date(data.timestamp);
       $('#loading').hide();
-      if (data.url.indexOf('?') === -1) {
-        var iframeUrl = data.url + '?keepThis=true';
-        $('#now').attr('href', data.url + '?' + params);
-      } else {
-        var iframeUrl = data.url + '&keepThis=true';
-        $('#now').attr('href', data.url + '&' + params);
+      if (data.url.indexOf('ustream.tv') === -1) {
+        if (data.url.indexOf('?') === -1) {
+          var iframeUrl = data.url + '?keepThis=true';
+          $('#now').attr('href', data.url + '?' + params);
+        } else {
+          var iframeUrl = data.url + '&keepThis=true';
+          $('#now').attr('href', data.url + '&' + params);
+        }
+        $('#now').attr('title', data.title);
+        $('#TB_iframeContent').attr('src', iframeUrl);
+        tb_showIframe();
       }
-      $('#now').attr('title', data.title);
-      $('#TB_iframeContent').attr('src', iframeUrl);
-      tb_showIframe();
       $('#pages').prepend(
         '<p class="page" style="clear: both; padding: 5px;">' +
           '<a style="float: left;" href="/' + user.name + '">' +
