--- a/views/individual.jade
+++ b/views/individual.jade
@@ -12,6 +12,7 @@ script(type='text/javascript')
       var user = data.user;
       var date = new Date(data.timestamp);
       $('#loading').hide();
+      if (data.url.indexOf('ustream.tv') === -1) {
         if (data.url.indexOf('?') === -1) {
           var iframeUrl = data.url + '?keepThis=true';
           $('#now').attr('href', data.url + '?' + params);
@@ -22,6 +23,7 @@ script(type='text/javascript')
         $('#now').attr('title', data.title);
         $('#TB_iframeContent').attr('src', iframeUrl);
         tb_showIframe();
+      }
       $('#pages').prepend(
         '<p class="page" style="clear: both; padding: 5px;">' +
           '<a style="float: left;" href="/' + user.name + '">' +
